project/logs/20251003_111558.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatrueLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:33:38: error: no member named 'rgb' in 'Material'
        output.color.rgb = gMaterial.rgb * textureColor.rgb * gDirectionalLight.color.rgb * cos * gDirectionalLight.intensity;
                           ~~~~~~~~~ ^

